[package]
name = "dojo-bevy-wasm"
version = "0.1.0"
authors = ["JunichiSugiura <jun.sugiura.jp@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
bevy = "0.11"
# dojo-client = { git = "https://github.com/dojoengine/dojo", rev = "187a12e74ad1020d76a86a59315b55f9fb08891e" }
dojo-client = { path = "../../dojoengine/dojo/crates/dojo-client" }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["json"] }
starknet = "0.4.0"
url = "2.2.2"
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
